--- a/resources/views/ajax/choose_field_type.twig
+++ b/resources/views/ajax/choose_field_type.twig
@@ -9,7 +9,7 @@
     <ul class="nav nav-stacked">
         {% for field_type in field_types %}
             <li>
-                <a href="{{ url_to(url ~ '/create') }}?field_type={{ field_type.namespace }}">
+                <a href="{{ url_to('admin/pages/fields/create/' ~ field_type.namespace) }}">
                     <strong>{{ trans(field_type.name) }}</strong>
                     <br>
                     <small>{{ trans(field_type.description) }}</small>
