--- a/resources/views/ajax/choose_page_type.twig
+++ b/resources/views/ajax/choose_page_type.twig
@@ -6,15 +6,19 @@
 </div>
 
 <div class="modal-body">
-    <ul class="nav nav-stacked">
-        {% for type in types %}
-            <li>
-                <a href="{{ url_to('admin/pages/create?page_type=' ~ type.id) }}">
-                    <strong>{{ type.name }}</strong>
-                    <br>
-                    <small>{{ type.description }}</small>
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% if not types.isEmpty() %}
+        <ul class="nav nav-stacked">
+            {% for type in types %}
+                <li>
+                    <a href="{{ url_to('admin/pages/create?page_type=' ~ type.id) }}">
+                        <strong>{{ type.name }}</strong>
+                        <br>
+                        <small>{{ type.description }}</small>
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        {{ trans('streams::message.no_results') }}
+    {% endif %}
 </div>
