--- a/resources/views/ajax/choose_field.twig
+++ b/resources/views/ajax/choose_field.twig
@@ -2,18 +2,16 @@
     <button class="close" data-dismiss="modal">
         <span>&times;</span>
     </button>
-    <h4 class="modal-title">{{ trans('module::admin.choose_page_type') }}</h4>
+    <h4 class="modal-title">{{ trans('module::admin.choose_field') }}</h4>
 </div>
 
 <div class="modal-body">
-    {% if not types.isEmpty() %}
+    {% if not fields.isEmpty() %}
         <ul class="nav nav-stacked">
-            {% for type in types %}
+            {% for field in fields %}
                 <li>
-                    <a href="{{ url_to('admin/pages/create?page_type=' ~ type.id) }}">
-                        <strong>{{ type.name }}</strong>
-                        <br>
-                        <small>{{ type.description }}</small>
+                    <a href="{{ url_to('admin/pages/types/fields/' ~ id ~ '/assign/' ~ field.id) }}">
+                        <strong>{{ trans(field.name) }}</strong>
                     </a>
                 </li>
             {% endfor %}
