--- a/resources/views/ajax/choose_field_type.twig
+++ b/resources/views/ajax/choose_field_type.twig
@@ -10,7 +10,7 @@
         {% for field_type in field_types %}
             <li>
                 <a href="{{ url_to('admin/pages/fields/create?field_type=' ~ field_type.namespace) }}">
-                    <strong>{{ trans(field_type.name) }}</strong>
+                    <strong>{{ trans(field_type.getName()) }}</strong>
                     <br>
                     <small>{{ trans(field_type.description) }}</small>
                 </a>
