--- a/resources/views/ajax/choose_type.twig
+++ b/resources/views/ajax/choose_type.twig
@@ -10,7 +10,7 @@
         <ul class="nav nav-stacked">
             {% for type in types %}
                 <li>
-                    <a href="{{ url_to('admin/pages/create?type=' ~ type.id) }}">
+                    <a href="{{ url_to('admin/pages/create?type=' ~ type.id ~ '&parent=' ~ request_get('parent')) }}">
                         <strong>{{ type.name }}</strong>
                         <br>
                         <small>{{ type.description }}</small>
