--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,4 +1,4 @@
-{% extends page.type.theme_layout ?: "theme::layouts/default" %}
+{% extends page.theme_layout ?: "theme::layouts/default" %}
 
 {% block content %}
     {{ page.content|raw }}
