--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,5 +1,5 @@
 {% extends page.theme_layout ?: "theme::layouts/default" %}
 
 {% block content %}
-    {{ page.content|raw }}
+    {{ content|raw }}
 {% endblock %}
