--- a/resources/views/nav.twig
+++ b/resources/views/nav.twig
@@ -1,5 +1,5 @@
 {% import options.macro ?: "anomaly.module.pages::macro" as macro %}
 
 <ul class="{{ options.list_class }}">
-    {{ macro.links(parent ? parent.children : pages.topLevel(), pages, page(), options) }}
+    {{ macro.links(options.parent ? options.parent.children : pages.topLevel(), pages, page(), options) }}
 </ul>
