--- a/resources/views/macro.twig
+++ b/resources/views/macro.twig
@@ -3,23 +3,23 @@
 
         {% set children = collection.children(page) %}
 
-        <li class="
+        <{{ options.link_tag ?: 'li' }} class="
             {{ children.isEmpty() ? '' : (options.dropdown_class ?: 'dropdown') }}
             {{ collection.hasActive(page, active) ? options.get('has_active_class', 'active') }}
             {{ page.id == active.id ? options.get('active_class', 'active') }}
             {{ options.item_class }}">
 
-            <a href="{{ url(page.path) }}">
+            <a href="{{ url(page.path) }}" class="{{ options.link_class }}">
                 {{ page.title }}
             </a>
 
             {% if not children.isEmpty() %}
                 {% if depth+1 <= options.get('depth', 999) %}
-                    <ul class="{{ options.child_list_class }}">
+                    <{{ options.child_list_tag ?: options.list_tag ?: 'ul' }} class="{{ options.child_list_class }}">
                         {{ _self.links(children, collection, options, depth+1) }}
-                    </ul>
+                    </{{ options.child_list_tag ?: options.list_tag ?: 'ul' }}>
                 {% endif %}
             {% endif %}
-        </li>
+        </{{ options.link_tag ?: 'li' }}>
     {% endfor %}
 {% endmacro %}
