--- a/resources/views/nav.twig
+++ b/resources/views/nav.twig
@@ -1,5 +1,5 @@
 {% import options.get('macro', 'anomaly.module.pages::macro') as macro %}
 
-<ul class="{{ options.list_class }}">
+<{{ options.list_tag ?: 'ul' }} class="{{ options.list_class }}">
     {{ macro.links(options.parent ? pages.children(options.parent) : pages.top(), pages, template.page, options, 1) }}
-</ul>
+</{{ options.list_tag ?: 'ul' }}>
