--- a/resources/views/structure.twig
+++ b/resources/views/structure.twig
@@ -1,5 +1,5 @@
 {% import options.get('macro', 'anomaly.module.pages::macro') as macro %}
 
 <{{ options.list_tag ?: 'ul' }} class="{{ options.list_class }}">
-    {{ macro.links(options.parent ? pages.children(options.parent) : pages.top(), pages, template.page, options, 1) }}
+    {{ macro.links(options.parent ? options.parent.children : pages.top(), pages, options, 1) }}
 </{{ options.list_tag ?: 'ul' }}>
