Fix issue where null values (possibly from seeding) caused issues.. Safely default to default layout.

--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,4 +1,4 @@
-{% extends page.theme_layout ?: "theme::layouts/default" %}
+{% extends page.theme_layout.value ?: "theme::layouts/default" %}
 
 {% block content %}
     {{ content|raw }}
