Fix presenter issue - this is a required field so don't overstep

--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,4 +1,4 @@
-{% extends page.theme_layout.value ?: "theme::layouts/default" %}
+{% extends page.theme_layout.key %}
 
 {% block content %}
     {{ content|raw }}
