Fallback to the page type's layout in the case that the page isn't overriding it.

--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,4 +1,4 @@
-{% extends page.theme_layout.key %}
+{% extends page.theme_layout.key ?: page.type.theme_layout.key %}
 
 {% block content %}
     {{ content|raw }}
