--- a/resources/views/macro.twig
+++ b/resources/views/macro.twig
@@ -1,22 +1,26 @@
 {% macro links(pages, collection, options, depth) %}
     {% for page in pages %}
         <{{ options.link_tag ?: 'li' }} class="
-            {{ page.children.isEmpty() ? '' : (options.dropdown_class ?: 'dropdown') }}
-            {{ page.active ? options.get('active_class', 'active') }}
-            {{ page.current ? options.get('current_class', 'current') }}
-            {{ options.item_class }}">
+        {{ page.children.isEmpty() ? '' : (options.dropdown_class ?: 'dropdown') }}
+        {{ page.active ? options.get('active_class', 'active') }}
+        {{ page.current ? options.get('current_class', 'current') }}
+        {{ options.item_class }}">
 
-            <a href="{{ url(page.path) }}" class="{{ options.link_class }}">
-                {{ page.title }}
-            </a>
+        <a href="{{ url(page.path) }}" class="{{ options.link_class }}">
+            {{ page.title }}
+        </a>
 
-            {% if not page.children.isEmpty() %}
-                {% if depth+1 <= options.get('depth', 999) %}
-                    <{{ options.child_list_tag ?: options.list_tag ?: 'ul' }} class="{{ options.child_list_class }}">
-                        {{ _self.links(page.children, collection, options, depth+1) }}
-                    </{{ options.child_list_tag ?: options.list_tag ?: 'ul' }}>
-                {% endif %}
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="fa fa-chevron-left"></i>
+        </a>
+
+        {% if not page.children.isEmpty() %}
+            {% if depth+1 <= options.get('depth', 999) %}
+                <{{ options.child_list_tag ?: options.list_tag ?: 'ul' }} class="{{ options.child_list_class }}">
+                {{ _self.links(page.children, collection, options, depth+1) }}
+                </{{ options.child_list_tag ?: options.list_tag ?: 'ul' }}>
             {% endif %}
+        {% endif %}
         </{{ options.link_tag ?: 'li' }}>
     {% endfor %}
 {% endmacro %}
