Improve how pages are rendered.

--- a/resources/views/page.twig
+++ b/resources/views/page.twig
@@ -1,5 +1,7 @@
 {% extends page.theme_layout.key ?: page.type.theme_layout.key %}
 
 {% block content %}
-    {{ content|raw }}
+    {% block page %}
+        {{ content|raw }}
+    {% endblock %}
 {% endblock %}
