--- a/resources/views/macro.twig
+++ b/resources/views/macro.twig
@@ -29,7 +29,7 @@
                 {% endif %}
 
                 <{{ options.child_list_tag ?: options.list_tag ?: 'ul' }} class="{{ options.child_list_class }}">
-                {% import options.get('macro', _self ) as macro %}
+                {% import _self as macro %}
                  {{ macro.links(page.children, collection, options, depth+1) }}
                 </{{ options.child_list_tag ?: options.list_tag ?: 'ul' }}>
             {% endif %}
